Handle sequential focus navigation starting point in shadow trees correctly

* Document::sequential_focus_navigation_starting_point_ count be a
  disconnected Range if a shadow tree including a focused element is
  disconnected.
  Introduce Range::FixupRemovedNodeAcrossShadowBoundary() to keep connected
  nodes in the Range.

* Range::FirstNode() can be a ShadowRoot if a focused element in it is
  disconnected.
  We use FlatTreeTraversal instead of ElementTraversal to find a
  neighbor element.

Bug: 705786
Change-Id: I51986133fd2ce01fe14a96d19c0ab4e477667feb
Reviewed-on: https://chromium-review.googlesource.com/c/1278408
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599575}
Former-commit-id: 6b9a2fed10338d3be52b935414e6c87382ac7a75